--- a/ios/myportfolio.xcodeproj/xcshareddata/xcschemes/myportfolio.xcscheme
+++ b/ios/myportfolio.xcodeproj/xcshareddata/xcschemes/myportfolio.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "myportfolio.app"
-               BlueprintName = "myportfolio"
-               ReferencedContainer = "container:myportfolio.xcodeproj">
+               BuildableName = "FundManager.app"
+               BlueprintName = "FundManager"
+               ReferencedContainer = "container:FundManager.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "myportfolioTests.xctest"
-               BlueprintName = "myportfolioTests"
-               ReferencedContainer = "container:myportfolio.xcodeproj">
+               BuildableName = "FundManagerTests.xctest"
+               BlueprintName = "FundManagerTests"
+               ReferencedContainer = "container:FundManager.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "myportfolio.app"
-            BlueprintName = "myportfolio"
-            ReferencedContainer = "container:myportfolio.xcodeproj">
+            BuildableName = "FundManager.app"
+            BlueprintName = "FundManager"
+            ReferencedContainer = "container:FundManager.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "myportfolio.app"
-            BlueprintName = "myportfolio"
-            ReferencedContainer = "container:myportfolio.xcodeproj">
+            BuildableName = "FundManager.app"
+            BlueprintName = "FundManager"
+            ReferencedContainer = "container:FundManager.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
